--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="app-header">
+    <header class="header">
         <div class="logo">
             <h1>Task Manager</h1>
         </div>
