--- a/main.html
+++ b/main.html
@@ -20,5 +20,19 @@
             </ul>
         </nav>
     </header>
+    <div class="task-form">
+        <h2>Add New Task</h2>
+        <form id="taskForm">
+            <label for="taskName">Task Name:</label>
+            <input type="text" id="taskName" name="taskName" required>
+            <label for="taskStatus">Status:</label>
+            <select id="taskStatus" name="taskStatus" required>
+                <option value="Not Started">Not Started</option>
+                <option value="In Progress">In Progress</option>
+                <option value="Completed">Completed</option>
+            </select>
+            <button type="submit">Create Task</button>
+        </form>
+    </div>
 </body>
 </html>
