--- a/main.html
+++ b/main.html
@@ -34,5 +34,19 @@
             <button type="submit">Create Task</button>
         </form>
     </div>
+    <div class="task-list">
+        <h2>Current Tasks</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Task Name</th>
+                    <th>Status</th>
+                </tr>
+            </thead>
+            <tbody id="taskTableBody">
+                
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
